--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app/index.ts",
+    "dev": "nodemon --exec node --loader ts-node/esm app/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "fmt": "prettier --write .",
@@ -16,11 +16,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "@fastify/mongodb": "^9.0.2",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
-    "mongoose": "^9.0.1",
     "viem": "^2.42.1"
   },
   "devDependencies": {
