--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fastify/mongodb": "^9.0.2",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "mongodb": "^7.0.0",
     "viem": "^2.42.1"
   },
   "devDependencies": {
