--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "skipLibCheck": true,
     "outDir": "dist",
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@/*": ["app/*"]
+    }
   },
   "include": ["app"],
   "exclude": ["node_modules", "dist"]
