get and filter settlements

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "prettier": "3.7.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "imports": {
+    "#app/*": "./app/*.js"
   }
 }
