--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec node --loader ts-node/esm app/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/app/index.js",
     "fmt": "prettier --write .",
     "prepare": "husky"
   },
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "mongodb": "^7.0.0",
+    "tsconfig-paths": "^4.2.0",
     "viem": "^2.42.1"
   },
   "devDependencies": {
@@ -34,6 +35,6 @@
     "typescript": "^5.9.3"
   },
   "imports": {
-    "#app/*": "./app/*.js"
+    "#app/*": "./dist/app/*"
   }
 }
