--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@a2zb/packages": "github:izcm/a2zblocks-packages",
     "@fastify/mongodb": "^9.0.2",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
