--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec node --conditions=dev --loader ts-node/esm app/index.ts",
+    "test": "vitest run",
     "build": "tsc",
     "start": "node --conditions=prod dist/app/index.js",
     "fmt": "prettier --write .",
@@ -33,7 +34,8 @@
     "nodemon": "^3.1.11",
     "prettier": "3.7.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.17"
   },
   "config": {},
   "imports": {
